--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link href="/images/favicon.png" rel="icon" />
-    <link href="/css/bootstrap.min.css" rel="stylesheet" />
-    <link href="/css/font-awesome.min.css" rel="stylesheet" />
-    <link href="/css/ie10-viewport-bug-workaround.css" rel="stylesheet" />
-    <link href="/css/alertify.min.css" rel="stylesheet" />
-    <link href="/css/alertify-bootstrap.min.css" rel="stylesheet" />
-    <link href="/css/black.css" rel="stylesheet" id="stylesheet" />
-    <link href="/css/small.css" rel="stylesheet" media="only screen and (max-device-width: 480px)" />
+    <link href="css/bootstrap.min.css" rel="stylesheet" />
+    <link href="css/font-awesome.min.css" rel="stylesheet" />
+    <link href="css/ie10-viewport-bug-workaround.css" rel="stylesheet" />
+    <link href="css/alertify.min.css" rel="stylesheet" />
+    <link href="css/alertify-bootstrap.min.css" rel="stylesheet" />
+    <link href="css/black.css" rel="stylesheet" id="stylesheet" />
+    <link href="css/small.css" rel="stylesheet" media="only screen and (max-device-width: 480px)" />
 
     <meta property="og:url" content="https://DEXdelta.github.io" />
     <meta property="og:title" content="DEXdelta | Decentralized Ethereum Token Exchange" />
@@ -45,7 +45,7 @@
             <li class="dropdown" id="tokensDropdown"></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
-          	<li><a href="/about/"><i class="fa fa-info-circle"></i> Add your token</a></li>
+          	<li><a href="about/"><i class="fa fa-info-circle"></i> Add your token</a></li>
           	<li style="display: none;" class="dropdown" id="helpDropdown"></li>
             <li class="dropdown" id="tokenGuidesDropdown"></li>
             <li class="dropdown" id="connection"></li>
