--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
     <link href="css/small.css" rel="stylesheet" media="only screen and (max-device-width: 480px)" />
 
     <meta property="og:url" content="https://DEXdelta.github.io" />
-    <meta property="og:title" content="DEXdelta | Decentralized Ethereum Token Exchange" />
+    <meta property="og:title" content="BKD | Decentralized Ethereum Token Exchange" />
     <meta property="og:description" content="DEXdelta is a decentralized Ethereum Token Exchange with the most ERC20 listings of any exchange. Start trading cryptocurrency today." />
     <meta property="og:image" content="https://DEXdelta.github.io/images/logo.png" />
 
-    <title>DEXdelta | Decentralized Ethereum Token Exchange</title>
+    <title>BKD | Decentralized Ethereum Token Exchange</title>
     <meta name="description" content="DEXdelta is a decentralized Ethereum Token Exchange with the most ERC20 listings of any exchange. Start trading cryptocurrency today." />
     <meta name="twitter:widgets:autoload" content="off">
   </head>
