--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link href="css/black.css" rel="stylesheet" id="stylesheet" />
     <link href="css/small.css" rel="stylesheet" media="only screen and (max-device-width: 480px)" />
 
-    <meta property="og:url" content="https://DEXdelta.github.io" />
+    <meta property="og:url" content="https://bkdplatform.github.io" />
     <meta property="og:title" content="BKD | Decentralized Ethereum Token Exchange" />
     <meta property="og:description" content="DEXdelta is a decentralized Ethereum Token Exchange with the most ERC20 listings of any exchange. Start trading cryptocurrency today." />
     <meta property="og:image" content="https://DEXdelta.github.io/images/logo.png" />
@@ -35,7 +35,7 @@
             <span class="icon-bar"></span>
           </button>
           <a class="navbar-brand" href="/">
-            <img src="/images/title.png" alt="I know it's not a fork, it's a trident." />
+            <img src="images/title.png" alt="I know it's not a fork, it's a trident." />
           </a>
         </div>
 
