--- a/index.html
+++ b/index.html
@@ -5,21 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link href="/images/favicon.png" rel="icon" />
-    <link href="/css/bootstrap.min.css" rel="stylesheet" />
-    <link href="/css/font-awesome.min.css" rel="stylesheet" />
-    <link href="/css/ie10-viewport-bug-workaround.css" rel="stylesheet" />
-    <link href="/css/alertify.min.css" rel="stylesheet" />
-    <link href="/css/alertify-bootstrap.min.css" rel="stylesheet" />
-    <link href="/css/black.css" rel="stylesheet" id="stylesheet" />
-    <link href="/css/small.css" rel="stylesheet" media="only screen and (max-device-width: 480px)" />
+    <link href="css/bootstrap.min.css" rel="stylesheet" />
+    <link href="css/font-awesome.min.css" rel="stylesheet" />
+    <link href="css/ie10-viewport-bug-workaround.css" rel="stylesheet" />
+    <link href="css/alertify.min.css" rel="stylesheet" />
+    <link href="css/alertify-bootstrap.min.css" rel="stylesheet" />
+    <link href="css/black.css" rel="stylesheet" id="stylesheet" />
+    <link href="css/small.css" rel="stylesheet" media="only screen and (max-device-width: 480px)" />
 
-    <meta property="og:url" content="https://DEXdelta.github.io" />
-    <meta property="og:title" content="DEXdelta | Decentralized Ethereum Token Exchange" />
+    <meta property="og:url" content="https://bkdplatform.github.io" />
+    <meta property="og:title" content="BKD | Decentralized Ethereum Token Exchange" />
     <meta property="og:description" content="DEXdelta is a decentralized Ethereum Token Exchange with the most ERC20 listings of any exchange. Start trading cryptocurrency today." />
-    <meta property="og:image" content="https://DEXdelta.github.io/images/logo.png" />
+    <meta property="og:image" content="https://bkdplatform.github.io/images/logo.png" />
 
-    <title>DEXdelta | Decentralized Ethereum Token Exchange</title>
-    <meta name="description" content="DEXdelta is a decentralized Ethereum Token Exchange with the most ERC20 listings of any exchange. Start trading cryptocurrency today." />
+    <title>BKD | Decentralized Ethereum Token Exchange</title>
+    <meta name="description" content="BKD is a decentralized Ethereum Token Exchange with the most ERC20 listings of any exchange. Start trading cryptocurrency today." />
     <meta name="twitter:widgets:autoload" content="off">
   </head>
 
