--- a/about/index.html
+++ b/about/index.html
@@ -1,13 +1,13 @@
 <html>
 	<head>
 		
-		<title>Add token to DexDelta!</title>
+		<title>Add token to BKD Platform!</title>
 		<meta name="description" content="Add your ERC20 token to DexDelta today! DexDelta is a fully decentralized Ethereum Token Exchange with the most ERC20 listings of any exchange." />
 		
-		<meta property="og:url" content="https://dex.github.io" />
-	    <meta property="og:title" content="Add token to DexDelta!" />
-	    <meta property="og:description" content="Add your ERC20 token to DexDelta today! DexDelta is a fully decentralized Ethereum Token Exchange with the most ERC20 listings of any exchange." />
-	    <meta property="og:image" content="https://dexdelta.github.io/images/logo.png" />
+		<meta property="og:url" content="https://bkdplatform.github.io" />
+	    <meta property="og:title" content="Add token to BKDPlatform!" />
+	    <meta property="og:description" content="Add your ERC20 token to bkdplatform today! BKD is a fully decentralized Ethereum Token Exchange with the most ERC20 listings of any exchange." />
+	    <meta property="og:image" content="https://bkdplatform.github.io/images/logo.png" />
 
 	
 		<style>
