--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <meta property="og:description" content="DEXdelta is a decentralized Ethereum Token Exchange with the most ERC20 listings of any exchange. Start trading cryptocurrency today." />
     <meta property="og:image" content="https://DEXdelta.github.io/images/logo.png" />
 
-    <title>BKD | Decentralized Ethereum Token Exchange</title>
+    <title>BKD Platform | Decentralized Ethereum Token Exchange</title>
     <meta name="description" content="DEXdelta is a decentralized Ethereum Token Exchange with the most ERC20 listings of any exchange. Start trading cryptocurrency today." />
     <meta name="twitter:widgets:autoload" content="off">
   </head>
