--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <span class="icon-bar"></span>
           </button>
           <a class="navbar-brand" href="/">
-            <img src="https://bkdplatform.com/eth/bkdicon.png" style="padding-left:20px;" alt="" />
+            <img src="https://bkdplatform.com/eth/bkdicon.png" style="padding-left:20px; width:75px; height:75px;" alt="" />
           </a>
         </div>
 
